# agentic-rag-architectures

./: .env.example  .gitignore  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: experiment.yaml  experiment_benchmark.yaml
docs/: architectures.md  artificial_dataset.md
notebooks/: 01_dataset_preview.ipynb  02_basic_rag.ipynb  03_experiments.ipynb  04_evaluation.ipynb  04_fiction_world.ipynb  05_fiction_world.ipynb
results/benchmark/: metrics_visualizations.ipynb
results/future_poland/: metrics_visualizations.ipynb
scripts/: run_experiments.py  run_single.py
src/: chunking.py  config.py  embedder.py  evaluator.py  llm_orchestrator.py  load_data.py  metrics.py  rag_pipeline.py  reranker.py  retriever.py  self_reflective_rag.py  utils.py
src/agents/: active_retrieval.py  chain_of_verification.py  madam_rag.py  marag.py  query_decomposition_rag.py  routing_rag.py  self_reflective_rag.py
src/agents/query_decomposition/: aggregator.py  planner.py
src/models/: chain_verification_models.py  query_decomposition_models.py  self_reflective_models.py
tests/: test_active_retrieval.py  test_madam_rag.py  test_marag.py  test_query_planner.py  test_routing_agent.py
